# test-mpi

./: .gitattributes  .gitignore  CMakeLists.txt  config.h.in
processedfiles/: processed_stats copy.txt  processed_stats.txt
src/: Analyzer.cpp  Analyzer.h  CSVProcessor.cpp  CSVProcessor.h  Constants.h  DataLoader.cpp  DataLoader.h  MPIParser.cpp  MPIParser.h  ViolationData.h  main.cpp  mini2.cpp
